# projective_dynamics

./: .gitignore  Makefile  README.md  run_benches.py
benchmark/: amg_vs_none.eps  grid.json  grid_cuda.json  grid_cusparse_high.json  grid_cusparse_low.json  grid_eigen.json  grid_viennacl.json  plot_benchmarks.py
blender/: export.py
data/: fs.glsl  lines_fs.glsl  vs.glsl
ext/imgui/: imgui_impl_glfw_gl3.cpp
mesh/: ant.bmesh  chihuahua.bmesh  chihuahua.json  triangulated_cloth.bmesh  triangulated_cloth.json
notes/: Makefile  midterm_report.tex  notes.tex  notes_bib.bib  report.bib  report.tex
notes/img/: amg_vs_jacobi_iters.eps  block_jacobi_scaling.eps  cusparse_vs_cg.eps  viennacl_none_jacobi_amg.eps
pk/: pk_io.h  pk_linalg.h
plot/: plot.cabal
plot/src/: Main.hs
src/: benchmark.cpp  main.c  mesh_binary.cpp  pd_constraint.h  pd_io.c  pd_linalg.c  pd_mesh.h  pd_solver.c  pd_solver.cpp  pd_solver.h  pd_time.h
src/backend/: pd_block_jacobi.cpp  pd_eigen.cpp  pd_verlet.c  pd_viennacl.cpp
util/: util.cabal
util/src/: Main.hs
