name:                plot
version:             0.1.0.0
category:            Plot
build-type:          Simple
cabal-version:       >=1.10

executable plot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson,
                       base >= 4.7 && < 5,
                       bytestring,
                       Chart,
                       Chart-cairo
